cockroachlabs-preview-main/docs/v24.1/create-function.mdx
---
title: "CREATE FUNCTION"
old_description: "The CREATE FUNCTION statement creates a user-defined function."
---

import { CreateFunction3 } from "/snippets/syntax-diagrams/CreateFunction3.jsx";

The `CREATE FUNCTION` [statement](/docs/v24.1/sql-statements) creates a [user-defined function](/docs/v24.1/user-defined-functions).

<Note>
The `CREATE FUNCTION` statement performs a schema change. For more information about how online schema changes work in CockroachDB, see [Online Schema Changes](/docs/v24.1/online-schema-changes).
</Note>

## Required privileges

- To define a function, a user must have [`CREATE` privilege](/docs/v24.1/security-reference/authorization#supported-privileges) on the schema of the function.
- To define a function with a [user-defined type](/docs/v24.1/create-type), a user must have `USAGE` privilege on the user-defined type.
- To resolve a function, a user must have at least the `USAGE` privilege on the schema of the function.
- To call a function, a user must have `EXECUTE` privilege on the function.
- At function definition and execution time, a user must have privileges on all the objects referenced in the function body. Privileges on referenced objects can be revoked and later function calls can fail due to lack of permission.

If you grant `EXECUTE` privilege as a default privilege at the database level, newly created functions inherit that privilege from the database.

## Synopsis

<CreateFunction3 />

## Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>routine&#95;create&#95;name</code></td><td>The name of the function.</td></tr><tr><td><code>routine&#95;param</code></td><td>A comma-separated list of function parameters, specifying the mode, name, and type.</td></tr><tr><td><code>routine&#95;return&#95;type</code></td><td>The type returned by the function.</td></tr><tr><td><code>routine&#95;body&#95;str</code></td><td>The body of the function. For allowed contents, see <a href="/docs/v24.1/user-defined-functions#overview">User-Defined Functions</a>.</td></tr></tbody></table>

## Example of a simple function

The following statement creates a function to compute the square of integers:

```sql
CREATE OR REPLACE FUNCTION sq(a INT) RETURNS INT AS 'SELECT a*a' LANGUAGE SQL;
```

The following statement invokes the `sq` function:

```sql
SELECT sq(2);
```

```text
  sq
-----
  4
(1 row)
```

## Examples of functions that reference tables

#### Setup

To follow along, run [`cockroach demo`](/docs/v24.1/cockroach-demo) to start a temporary, in-memory cluster with the [`movr`](/docs/v24.1/movr) sample dataset preloaded:

```shell
$ cockroach demo
```

### Create a function that references a table

The following statement defines a function that returns the total number of MovR application users.

```sql
CREATE OR REPLACE FUNCTION num_users() RETURNS INT AS 'SELECT count(*) FROM users' LANGUAGE SQL;
```

```sql
SELECT num_users();
```

```text
  num_users
-------------
         50
(1 row)
```

### Create a function that modifies a table

The following statement defines a function that updates the `rules` value for a specified row in `promo_codes`.

```sql
CREATE OR REPLACE FUNCTION update_code(
  code_name VARCHAR,
  new_rules JSONB
  ) 
  RETURNS promo_codes AS $$
    UPDATE promo_codes SET rules = new_rules
    WHERE code = code_name
    RETURNING *;
  $$ LANGUAGE SQL;
```

Given the `promo_codes` row:

```text
            code           |                          description                           |    creation_time    |   expiration_time   |                    rules
---------------------------+----------------------------------------------------------------+---------------------+---------------------+-----------------------------------------------
  0_building_it_remember   | Door let Mrs manager buy model. Course rock training together. | 2019-01-09 03:04:05 | 2019-01-14 03:04:05 | {"type": "percent_discount", "value": "10%"}
```

```sql
SELECT update_code('0_building_it_remember', '{"type": "percent_discount", "value": "50%"}');
```

```text
                                                                                          update_code
------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
  (0_building_it_remember,"Door let Mrs manager buy model. Course rock training together.","2019-01-09 03:04:05","2019-01-14 03:04:05","{""type"": ""percent_discount"", ""value"": ""50%""}")
```

### Create a function that uses a `WHERE` clause

The following statement defines a function that returns the total revenue for rides taken in European cities.

```sql
CREATE OR REPLACE FUNCTION total_euro_revenue() RETURNS DECIMAL LANGUAGE SQL AS $$
  SELECT SUM(revenue) FROM rides WHERE city IN ('paris', 'rome', 'amsterdam')
$$;
```

```sql
SELECT total_euro_revenue();
```

```text
  total_euro_revenue
----------------------
             8468.00
```

### Create a function that returns a set of results

The following statement defines a function that returns information for all vehicles not in use. The `SETOF` clause specifies that the function should return each row as the query executes to completion.

```sql
CREATE OR REPLACE FUNCTION available_vehicles() RETURNS SETOF vehicles LANGUAGE SQL AS $$
  SELECT * FROM vehicles WHERE status = 'available'
$$;
```

```sql
SELECT city,current_location,type FROM available_vehicles();
```

```text
      city      |      current_location       |    type
----------------+-----------------------------+-------------
  amsterdam     | 4102 Stout Flat Apt. 11     | skateboard
  boston        | 30226 Logan Branch Suite 76 | skateboard
  los angeles   | 25730 Crystal Terrace       | scooter
  paris         | 9429 Joseph Neck Suite 52   | skateboard
  san francisco | 43325 Jeffrey Wall Suite 26 | scooter
(5 rows)
```

### Create a function that returns a `RECORD` type

The following statement defines a function that returns the information for the user that most recently completed a ride. The information is returned as a record, which takes the structure of the row that is retrieved by the selection query.

In the function subquery, the latest `end_time` timestamp is used to determine the most recently completed ride.

```sql
CREATE OR REPLACE FUNCTION last_rider() RETURNS RECORD LANGUAGE SQL AS $$
  SELECT * FROM users WHERE id = (
    SELECT rider_id FROM rides WHERE end_time = (SELECT max(end_time) FROM rides)
  )
$$;
```

```sql
SELECT last_rider();
```

```text
                                                last_rider
----------------------------------------------------------------------------------------------------------
  (70a3d70a-3d70-4400-8000-000000000016,seattle,"Mary Thomas","43322 Anthony Flats Suite 85",1141093639)
(1 row)
```

### Create a function that uses `OUT` and `INOUT` parameters

The following statement uses a combination of `OUT` and `INOUT` parameters to modify a provided value and output the result. An `OUT` parameter returns a value, while an `INOUT` parameter passes an input value and returns a value.

```sql
CREATE OR REPLACE FUNCTION double_triple(INOUT double INT, OUT triple INT) AS 
  $$
  BEGIN
    double := double * 2;
    triple := double * 3;
  END;
  $$ LANGUAGE PLpgSQL;
```

```sql
SELECT double_triple(1);
```

```text
  double_triple
-----------------
  (2,6)
```

The `CREATE FUNCTION` statement does not need a `RETURN` statement because this is added implicitly for a function with `OUT` parameters:

```sql
SHOW CREATE FUNCTION double_triple;
```

```text
  function_name |                             create_statement
----------------+---------------------------------------------------------------------------
  double_triple | CREATE FUNCTION public.double_triple(INOUT double INT8, OUT triple INT8)
                |     RETURNS RECORD
                |     VOLATILE
                |     NOT LEAKPROOF
                |     CALLED ON NULL INPUT
                |     LANGUAGE plpgsql
                |     AS $$
                |     BEGIN
                |     double := double * 2;
                |     triple := double * 3;
                |     END;
                | $$
```

### Create a function that invokes a function

The following statement defines a function that invokes the [`double_triple` example function](#create-a-function-that-uses-out-and-inout-parameters).

```sql
CREATE OR REPLACE FUNCTION f(input_value INT)
  RETURNS RECORD 
  AS $$
  BEGIN
      RETURN double_triple(input_value);
  END;
  $$ LANGUAGE PLpgSQL;
```

```sql
SELECT f(1);
```

```text
    f
---------
  (2,6)
```

### Create a function that uses a loop

The following user-defined function returns the `n`th integer in the Fibonacci sequence.

It uses the [PL/pgSQL](/docs/v24.1/plpgsql) [`LOOP`](/docs/v24.1/plpgsql#write-loops) syntax to iterate through a simple calculation, and [`RAISE EXCEPTION`](/docs/v24.1/plpgsql#report-messages-and-handle-exceptions) to return an error message if the specified `n` is negative.

```sql
CREATE FUNCTION fib(n int) RETURNS INT AS $$
    DECLARE
        tmp INT;
        a INT := 0;
        b INT := 1;
        i INT := 2;
    BEGIN
        IF n < 0 THEN
            RAISE EXCEPTION 'n must be non-negative';
        END IF;
        IF n = 0 THEN RETURN 0; END IF;
        IF n = 1 THEN RETURN 1; END IF;
        LOOP
            IF i > n THEN EXIT; END IF;
            tmp := a + b;
            a := b;
            b := tmp;
            i := i + 1;
        END LOOP;
        RETURN b;
    END
  $$ LANGUAGE PLpgSQL;
```

```sql
SELECT fib(8);
```

```text
  fib
-------
   21
```

## See also

- [User-Defined Functions](/docs/v24.1/user-defined-functions)
- [`ALTER FUNCTION`](/docs/v24.1/alter-function)
- [`DROP FUNCTION`](/docs/v24.1/drop-function)
- [SQL Statements](/docs/v24.1/sql-statements)
- [Online Schema Changes](/docs/v24.1/online-schema-changes)
